--- a/index.html
+++ b/index.html
@@ -13,27 +13,32 @@
 </head>
 <body class="overflow-hidden">
 
-    <!-- Container principal que terá a classe de retração -->
     <div id="app-wrapper" class="w-full h-screen flex rounded-3xl">
         
-        <!-- Sidebar (barra lateral) -->
         <aside id="sidebar" class="sidebar flex-shrink-0 p-6 flex flex-col">
-            <!-- Botão para retrair/expandir a sidebar -->
             <button id="sidebar-toggle-btn" class="sidebar-toggle-btn" title="Alternar menu">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12" /></svg>
             </button>
 
-            <!-- Conteúdo da Sidebar -->
             <div class="sidebar-content flex flex-col h-full">
-                <div id="drop-zone" class="w-full flex-grow border-2 border-dashed border-white/20 rounded-2xl flex flex-col items-center justify-center text-center p-4 cursor-pointer hover:bg-white/5 transition-colors mb-6">
+                <div id="drop-zone" class="w-full h-52 flex-shrink-0 border-2 border-dashed border-white/20 rounded-2xl flex flex-col items-center justify-center text-center p-4 cursor-pointer hover:bg-white/5 transition-colors mb-6">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-white/50 mb-2" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1"><path stroke-linecap="round" stroke-linejoin="round" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12" /></svg>
                     <p class="text-white font-semibold">Importar</p>
                     <p class="text-white/60 text-xs mt-1">(mp4, mov, mkv, avi, webm, jpg, jpeg, png)</p>
                 </div>
+                
+                <div class="presets-section flex-grow flex flex-col min-h-0">
+                    <div class="flex justify-between items-center mb-2 flex-shrink-0">
+                        <h3 class="text-lg font-bold text-white/90">Presets</h3>
+                        <button id="manage-presets-btn" class="text-sm font-semibold text-purple-300 hover:text-purple-200 transition-colors">Gerir</button>
+                    </div>
+                    <div id="presets-checkbox-list" class="flex-grow space-y-2 pr-2 overflow-y-auto custom-scrollbar">
+                        <!-- Checkboxes dos presets serão inseridos aqui -->
+                    </div>
+                </div>
             </div>
         </aside>
 
-        <!-- Painel Principal (Direita) -->
         <div id="main-panel" class="flex-grow flex flex-col min-w-0">
             <div id="title-bar" class="w-full h-12 flex-shrink-0 flex items-center px-4 justify-between">
                 <div class="window-controls-container">
@@ -46,7 +51,6 @@
             </div>
 
             <main class="w-full flex-grow p-6 pt-0 flex flex-col min-h-0">
-                <!-- Campo Nome do Cliente (movido para cá) -->
                 <div class="mb-4 flex-shrink-0">
                     <input type="text" id="client-name" placeholder="Nome do Cliente" class="w-full bg-white/10 text-white p-3 rounded-full border-2 border-transparent focus:border-white/30 focus:outline-none transition-all">
                 </div>
@@ -56,6 +60,7 @@
                         <!-- Itens da fila -->
                     </div>
                 </div>
+
                 <div id="action-buttons" class="flex items-center justify-center gap-4 flex-shrink-0 pt-6">
                     <button id="clear-queue-btn" class="action-btn bg-white/10" style="display: none;">Limpar Fila</button>
                     <button id="log-btn" class="action-btn bg-white/10" style="display: none;">Ver Log</button>
@@ -72,6 +77,61 @@
             <span class="modal-close-btn">&times;</span>
             <h4>Log Completo do Processo</h4>
             <pre id="log-output" class="custom-scrollbar"></pre>
+        </div>
+    </div>
+
+    <div id="presets-modal" class="modal-overlay" style="display: none;">
+        <div class="modal-content-lg">
+            <span id="presets-modal-close-btn" class="modal-close-btn">&times;</span>
+            <h4 class="mb-4">Gerir Presets de Renderização</h4>
+            <div class="flex gap-6 h-full">
+                <div class="w-1/3 border-r border-white/10 pr-6">
+                    <h5 class="font-bold mb-2">Presets Salvos</h5>
+                    <div id="saved-presets-list" class="space-y-2 custom-scrollbar pr-2 overflow-y-auto max-h-[400px]"></div>
+                </div>
+                <div class="w-2/3">
+                    <h5 id="preset-form-title" class="font-bold mb-2">Adicionar Novo Preset</h5>
+                    <form id="preset-form" class="space-y-3">
+                        <input type="hidden" id="preset-id">
+                        <div>
+                            <label for="preset-name" class="text-sm font-medium text-white/70">Nome do Preset</label>
+                            <input type="text" id="preset-name" class="modal-input" placeholder="Ex: WIDEFULLHD" required>
+                        </div>
+                         <div class="grid grid-cols-2 gap-4">
+                            <div>
+                                <label for="preset-width" class="text-sm font-medium text-white/70">Largura (px)</label>
+                                <input type="number" id="preset-width" class="modal-input" placeholder="1920" required>
+                            </div>
+                            <div>
+                                <label for="preset-height" class="text-sm font-medium text-white/70">Altura (px)</label>
+                                <input type="number" id="preset-height" class="modal-input" placeholder="1080" required>
+                            </div>
+                        </div>
+                        <div>
+                            <label for="preset-duration" class="text-sm font-medium text-white/70">Duração (s)</label>
+                            <input type="number" id="preset-duration" class="modal-input" placeholder="10" required>
+                        </div>
+                        <div class="flex items-center gap-4 pt-2">
+                             <div class="flex items-center">
+                                <input id="preset-applyBar" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-purple-600 focus:ring-purple-500">
+                                <label for="preset-applyBar" class="ml-2 block text-sm text-white/90">Aplicar Barra Preta</label>
+                            </div>
+                             <div class="flex items-center">
+                                <input id="preset-letterbox" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-purple-600 focus:ring-purple-500">
+                                <label for="preset-letterbox" class="ml-2 block text-sm text-white/90">Manter Proporção (Letterbox)</label>
+                            </div>
+                        </div>
+                        <div id="bar-size-container" style="display: none;">
+                            <label for="preset-barSize" class="text-sm font-medium text-white/70">Tamanho da Barra Preta (px)</label>
+                            <input type="number" id="preset-barSize" class="modal-input" placeholder="75">
+                        </div>
+                        <div class="flex justify-end gap-4 pt-4">
+                            <button type="button" id="delete-preset-btn" class="action-btn bg-red-800/80 hover:bg-red-700" style="display: none;">Excluir</button>
+                            <button type="submit" class="action-btn main-action-btn">Salvar Preset</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
