Remove unused files and add auto-update functionality with UI enhancements

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
                         <!-- Checkboxes dos presets serão inseridos aqui -->
                     </div>
                 </div>
+
+                <!-- Botão de Atualização -->
+                <div class="mt-auto flex-shrink-0">
+                    <button id="check-for-updates-btn" class="w-full text-sm font-semibold text-white/60 hover:text-white transition-colors py-2 rounded-lg hover:bg-white/10">
+                        Verificar Atualizações
+                    </button>
+                </div>
             </div>
         </aside>
 
